build itself automatically

--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,9 @@ stopwords = tidyall
 use_github_issues = 1
 -remove = Test::Synopsis
 
+[lib] 
+lib = lib
+
 [MetaNoIndex]
 package = Dist::Zilla::Plugin::ATOOMIC::CheckChangesHasContent
 package = Dist::Zilla::Plugin::ATOOMIC::Contributors
